// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` camera mapping test  works as planned:  after Closing pop up  1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 13,
    "mapTo": "camera",
    "theme": "program",
    "validate": {
      "relationshipNamePath": "name",
      "relationshipCollection": "cameras",
      "relationshipIdPath": "_id"
    }
  },
  "prefix": "shotEdit",
  "theme": "program",
  "value": "c29999999999999999999999",
  "cameras": [
    "c19999999999999999999999",
    "c29999999999999999999999",
    "c39999999999999999999999"
  ],
  "showPopUp": false
}
</div>
`;

exports[` camera mapping test  works as planned:  after Fetching cameras  1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 13,
    "mapTo": "camera",
    "theme": "program",
    "validate": {
      "relationshipNamePath": "name",
      "relationshipCollection": "cameras",
      "relationshipIdPath": "_id"
    }
  },
  "prefix": "shotEdit",
  "theme": "program",
  "value": "c29999999999999999999999",
  "cameras": [
    "c19999999999999999999999",
    "c29999999999999999999999",
    "c39999999999999999999999"
  ]
}
</div>
`;

exports[` camera mapping test  works as planned:  after Opening pop up  1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 13,
    "mapTo": "camera",
    "theme": "program",
    "validate": {
      "relationshipNamePath": "name",
      "relationshipCollection": "cameras",
      "relationshipIdPath": "_id"
    }
  },
  "prefix": "shotEdit",
  "theme": "program",
  "value": "c29999999999999999999999",
  "cameras": [
    "c19999999999999999999999",
    "c29999999999999999999999",
    "c39999999999999999999999"
  ],
  "showPopUp": true
}
</div>
`;

exports[` camera mapping test  works as planned:  after Setting Camera  1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 13,
    "mapTo": "camera",
    "theme": "program",
    "validate": {
      "relationshipNamePath": "name",
      "relationshipCollection": "cameras",
      "relationshipIdPath": "_id"
    }
  },
  "prefix": "shotEdit",
  "theme": "program",
  "value": "c29999999999999999999999",
  "cameras": [
    "c19999999999999999999999",
    "c29999999999999999999999",
    "c39999999999999999999999"
  ]
}
</div>
`;

exports[` camera mapping test  works as planned:  after preparing cameras  1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 13,
    "mapTo": "camera",
    "theme": "program",
    "validate": {
      "relationshipNamePath": "name",
      "relationshipCollection": "cameras",
      "relationshipIdPath": "_id"
    }
  },
  "prefix": "shotEdit",
  "theme": "program",
  "cameras": [
    "c19999999999999999999999",
    "c29999999999999999999999",
    "c39999999999999999999999"
  ]
}
</div>
`;

exports[` camera mapping test  works as planned:  creation of cameras  1`] = `
Array [
  Object {
    "_id": "c19999999999999999999999",
    "ip": "localhost:4202/c1",
    "name": "Camera#1",
  },
  Object {
    "_id": "c29999999999999999999999",
    "ip": "localhost:4202/c2",
    "name": "Camera#2",
  },
  Object {
    "_id": "c39999999999999999999999",
    "ip": "localhost:4202/c3",
    "name": "Camera#3",
  },
]
`;

exports[` camera mapping test  works as planned:  creation of proInjects  1`] = `
Array [
  Object {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
  },
  Object {
    "_id": "b29999999999999999999999",
    "name": "pn2",
    "shot": 8,
  },
  Object {
    "_id": "b39999999999999999999999",
    "name": "pn3",
    "shot": 6,
  },
]
`;

exports[` camera mapping test  works as planned: Before anything 1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 13,
    "mapTo": "camera",
    "theme": "program",
    "validate": {
      "relationshipNamePath": "name",
      "relationshipCollection": "cameras",
      "relationshipIdPath": "_id"
    }
  },
  "prefix": "shotEdit",
  "theme": "program",
  "cameras": []
}
</div>
`;
